fix z-index issues - fix clipping of tooltip - fix dropbutton allowing multiple different ones to be open at the same time

--- a/addon/styles/components/ui-popup--dropbutton.scss
+++ b/addon/styles/components/ui-popup--dropbutton.scss
@@ -34,6 +34,7 @@
     left: 0px;
     width: 100vw;
     height: 100vw;
+    z-index: 1;
   }
 
 
