--- a/addon/styles/components/ui-popup--tooltip.scss
+++ b/addon/styles/components/ui-popup--tooltip.scss
@@ -31,12 +31,17 @@
     }
   }
 
+  &--element {
+    z-index: 2;
+  }
+
   &--overlay {
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100vw;
     height: 100vw;
+    z-index: 1;
   }
 
   &--element-attached-left {
